# kubenetviz

./: Cargo.toml
src/: cidr.rs  cli.rs  kube_client.rs  main.rs  pod_resolver.rs  policy_eval.rs  selector.rs
src/commands/: audit.rs  explain.rs  get.rs  graph.rs  health.rs  mod.rs  version.rs
src/resources/: mod.rs  namespaces.rs  network_policies.rs  network_policy.rs  pods.rs
