[package]
name = "kubenetviz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
kube = { version = "4", features = ["client"] }
k8s-openapi = { version = "0.28", features = ["v1_33"] }
ipnet = "2.12.0"
